[package]
name = "music-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cfg-if = "1.0.0"
clap = { version = "3.1.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
rspotify = { version = "0.11", features = ["cli"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]
